# omo_r1-ros2

./: .gitignore  README.md  README_KR.md
omo_r1/: CMakeLists.txt  package.xml  setup.cfg  setup.py
omo_r1_bringup/: CMakeLists.txt  create_udev_rules.sh  package.xml  setup.cfg  setup.py
omo_r1_bringup/launch/: bringup.launch.py  omo_r1_bringup.launch.py  omo_r1_lidar.launch.py  omo_r1_mcu.launch.py  omo_r1_motor_setting.launch.py  ydlidar_ros2_driver.launch.py
omo_r1_bringup/omo_r1_bringup/scripts/: omo_packet_handler.py  omo_r1_mcu_node.py  omo_r1_motor_setting_node.py
omo_r1_bringup/param/: omo_r1_lidar.yaml  omo_r1_mcu.yaml
omo_r1_cartographer/: CMakeLists.txt  package.xml  setup.cfg  setup.py
omo_r1_cartographer/config/: omo_r1.lua
omo_r1_cartographer/launch/: cartographer.launch.py  cartographer_rviz.launch.py  occupancy_grid.launch.py
omo_r1_cartographer/rviz/: cartographer.rviz
omo_r1_description/: package.xml  setup.cfg  setup.py
omo_r1_description/launch/: description_rviz.launch.py  omo_r1_description_launch.py  omo_r1_description_rviz.launch.py  omo_r1_state_publisher.launch.py  robot_state_publisher.launch.py
omo_r1_description/meshes/bases/: omo_r2_body.stl
omo_r1_description/meshes/wheels/: omo_r2_wheel.stl
omo_r1_description/rviz/: description.rviz
omo_r1_description/urdf/: omo_r1.urdf
omo_r1_gazebo/: CMakeLists.txt  package.xml
omo_r1_gazebo/launch/: empty_world.launch.py  omo_r1.launch.py  robot_state_publisher.launch.py
omo_r1_gazebo/models/omo_r1/: model.sdf
omo_r1_gazebo/models/omo_r1/meshes/bases/: omo_r1_body.dae
omo_r1_gazebo/models/omo_r1/meshes/sensors/: omo_r1_camera.dae  omo_r1_lidar.dae
omo_r1_gazebo/models/omo_r1/meshes/wheels/: omo_r1_wheel.dae
omo_r1_gazebo/models/omo_r1mini/: model.sdf
omo_r1_gazebo/worlds/empty_worlds/: omo_r1mini.model
omo_r1_interface/: CMakeLists.txt  package.xml
omo_r1_navigation2/: CMakeLists.txt  package.xml  setup.cfg  setup.py
omo_r1_navigation2/launch/: navigation2.launch.py  navigation2_rviz.launch.py
omo_r1_navigation2/map/: turtle_world.pgm  turtle_world.yaml
omo_r1_navigation2/param/: omo_r1.yaml
omo_r1_robot/: package.xml  setup.cfg  setup.py
omo_r1_robot/launch/: robot_control.launch.py
omo_r1_robot/omo_r1_robot/: packet_handler.py  robot_control.py
omo_r1_robot/param/: omo_r1.yaml
omo_r1_teleop/: CMakeLists.txt  package.xml  setup.cfg  setup.py
omo_r1_teleop/launch/: teleop_joy.launch.py  teleop_keyboard.launch.py
omo_r1_teleop/omo_r1_teleop/: teleop_keyboard.py
omo_r1_teleop/omo_r1_teleop/script/: teleop_joy.py  teleop_keyboard.py
