<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omo_r1</name>
  <version>0.0.0</version>
  <description>Meta package</description>
  <maintainer email="kucira00@gmail.com">Dr.K</maintainer>
  <license>Apache License, Version 2.0</license>

  <depend>omo_r1_bringup</depend>
  <depend>omo_r1_cartographer</depend>
  <depend>omo_r1_description</depend>
  <depend>omo_r1_navigation2</depend>
  <!-- <depend>omo_r1_robot</depend> -->
  <depend>omo_r1_teleop</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
