<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omo_r1_description</name>
  <version>0.0.1</version>
  <description>
    3D models of the OMORobot R1 for simulation and visualization
  </description>
  <license>Apache 2.0</license>
  <url type="repository">https://github.com/omorobot/omo_r1-foxy</url>
  <maintainer email="kyuhyong@gmail.com">Kyuhyong You</maintainer>
  <author email="bishopearson@gmail.com">Bishop Pearson</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
